--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "nodemon": "^1.18.9",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
+    "vue-star-rating": "^1.6.1",
     "vue-swal": "^1.0.0",
     "vuetify": "^1.4.1"
   },
